--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/postcss": "^4.0.9",
-    "next": "^15.2.1",
+    "bcrypt-ts": "^6.0.0",
+    "next": "^15.2.2",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,7 +24,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^15.2.1",
+    "eslint-config-next": "^15.2.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
